fix title wrap

--- a/src/app/styles/globals.css
+++ b/src/app/styles/globals.css
@@ -12,6 +12,10 @@
   code {
     font-size: 14px;
   }
+
+  h1 {
+    font-size: 20px;
+  }
 }
 
 * {
